<resources>
    <string name="app_name">Movies</string>
    <string name="default_name">John Doe</string>
    <string name="greetings">Hello</string>
    <string name="see_all">See all</string>
    <string name="all_movies">All Movies</string>
    <string name="search">Search</string>
    <string name="search_movie">Search Movie</string>
    <string name="error_message">Data not found</string>
    <string name="date_movie_detail">%s . %dh %dm </string>
    <string name="budget_currency">$ %s </string>
    <string name="rating_fact">%s (%d)</string>
    <string name="overview">Overview</string>
    <string name="key_fact">Key Facts</string>
    <string name="budget">Budget</string>
    <string name="revenue">Revenue</string>
    <string name="rating">Rating</string>
    <string name="language">Original Language</string>
    <string name="your">
     YOUR
</string>
    <string name="favourite">
     FAVOURITE
</string>
    <string name="our_staff_pick">
     <![CDATA[
  OUR <b>STAFF PICKS</b>
    ]]>
    </string>
    <string name="our">
    OUR
</string>
    <string name="staff_pick">
    STAFF PICK
</string>
    <string name="image_desc">Image</string>
    <string name="title_activity_detail">DetailActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home_screen">HomeScreen</string>
</resources>