<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.search.SearchFragment">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        android:layout_marginStart="@dimen/page_margin_start_end"
        android:layout_marginTop="@dimen/page_margin_start_end"
        android:contentDescription="@string/image_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_search_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_movies"
        android:textColor="@color/black_text"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/page_margin_start_end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_view"
        android:layout_width="0dp"
        app:queryHint="@string/search"
        android:background="@drawable/search_view_bg"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/page_margin_start_end"
        android:layout_marginEnd="@dimen/page_margin_start_end"
        android:layout_marginTop="@dimen/search_bar_margin_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_search_title" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_all_movies"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/page_margin_start_end"
        android:layout_marginEnd="@dimen/page_margin_start_end"
        android:layout_marginTop="@dimen/search_bar_margin"
        app:layout_constraintTop_toBottomOf="@+id/search_view"
        app:layout_constraintBottom_toBottomOf="parent"
         />
</androidx.constraintlayout.widget.ConstraintLayout>