<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/btn_close"
            android:layout_width="@dimen/icon_size_medium"
            android:layout_height="@dimen/icon_size_medium"
            android:layout_marginTop="@dimen/page_margin_start_end"
            android:layout_marginEnd="@dimen/page_margin_start_end"
            android:background="@null"
            android:contentDescription="@string/image_desc"
            android:src="@drawable/ic_close"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btn_bookmark"
            android:layout_width="@dimen/icon_size_medium"
            android:layout_height="@dimen/icon_size_medium"
            android:layout_marginTop="@dimen/page_margin_start_end"
            android:layout_marginEnd="@dimen/margin_size_small"
            android:background="@null"
            android:contentDescription="@string/image_desc"
            android:src="@drawable/ic_favorite_filled"
            app:layout_constraintEnd_toStartOf="@+id/btn_close"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/ll_detail"
            app:layout_constraintTop_toBottomOf="@+id/btn_bookmark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/iv_detail_poster"
                android:layout_width="@dimen/poster_detail_width"
                android:layout_height="@dimen/poster_detail_height"
                android:layout_marginTop="@dimen/poster_detail_margin"
                android:contentDescription="@string/image_desc"
                 />

            <RatingBar
                android:id="@+id/rb_detail"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:stepSize="0.5"
                android:theme="@style/RatingBar"
                android:layout_marginTop="@dimen/rating_detail_margin"
                />

            <TextView
                android:id="@+id/tv_detail_date"
                android:textSize="@dimen/text_size_small_medium"
                android:textColor="@color/gray"
                android:layout_marginTop="@dimen/date_detail_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:gravity="center"
                android:id="@+id/tv_detail_title"
                android:textSize="@dimen/text_size_large"
                android:textColor="@color/black_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_tags"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_size_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_overview"
            app:layout_constraintTop_toBottomOf="@+id/ll_detail"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/overview"
            android:layout_marginStart="@dimen/page_margin_start_end"
            android:textSize="@dimen/text_size_medium"
            android:layout_marginTop="@dimen/poster_detail_margin"
            android:textStyle="bold"
            android:textColor="@color/black_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_overview_value"
            app:layout_constraintTop_toBottomOf="@+id/tv_overview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/rating_detail_margin"
            android:layout_marginEnd="@dimen/page_margin_start_end"
            android:layout_marginStart="@dimen/page_margin_start_end"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_key"
            app:layout_constraintTop_toBottomOf="@+id/tv_overview_value"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/key_fact"
            android:layout_marginStart="@dimen/page_margin_start_end"
            android:textSize="@dimen/text_size_medium"
            android:layout_marginTop="@dimen/poster_detail_margin"
            android:textStyle="bold"
            android:textColor="@color/black_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:id="@+id/ll_key_first_line"
            app:layout_constraintTop_toBottomOf="@+id/tv_key"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:baselineAligned="false"
            android:layout_marginTop="@dimen/date_detail_margin"
            android:layout_marginEnd="@dimen/page_margin_start_end"
            android:layout_marginStart="@dimen/page_margin_start_end"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:background="@drawable/tag_rounded_corner"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/key_fact_margin_end">
                <TextView
                    android:text="@string/budget"
                    android:textSize="@dimen/text_size_small"
                    android:textColor="@color/black_text"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="@dimen/key_fact_margin"
                    android:layout_marginStart="@dimen/key_fact_margin"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/tv_budget"
                    android:textColor="@color/black"
                    android:layout_marginTop="@dimen/key_fact_margin"
                    android:layout_marginStart="@dimen/key_fact_margin"
                    android:layout_marginBottom="@dimen/key_fact_margin"
                    android:textSize="@dimen/text_size_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:background="@drawable/tag_rounded_corner"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/revenue"
                    android:textSize="@dimen/text_size_small"
                    android:textColor="@color/black_text"
                    android:layout_marginTop="@dimen/key_fact_margin"
                    android:layout_marginStart="@dimen/key_fact_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/tv_revenue"
                    android:textColor="@color/black"
                    android:layout_marginTop="@dimen/key_fact_margin"
                    android:layout_marginStart="@dimen/key_fact_margin"
                    android:layout_marginBottom="@dimen/key_fact_margin"
                    android:textSize="@dimen/text_size_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_key_second_line"
            app:layout_constraintTop_toBottomOf="@+id/ll_key_first_line"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/date_detail_margin"
            android:layout_marginEnd="@dimen/page_margin_start_end"
            android:layout_marginStart="@dimen/page_margin_start_end"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:background="@drawable/tag_rounded_corner"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/key_fact_margin_end">
                <TextView
                    android:text="@string/language"
                    android:textSize="@dimen/text_size_small"
                    android:textColor="@color/black_text"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="@dimen/key_fact_margin"
                    android:layout_marginStart="@dimen/key_fact_margin"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/tv_language"
                    android:textColor="@color/black"
                    android:layout_marginTop="@dimen/key_fact_margin"
                    android:layout_marginStart="@dimen/key_fact_margin"
                    android:layout_marginBottom="@dimen/key_fact_margin"
                    android:textSize="@dimen/text_size_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:background="@drawable/tag_rounded_corner"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/rating"
                    android:textSize="@dimen/text_size_small"
                    android:textColor="@color/black_text"
                    android:layout_marginTop="@dimen/key_fact_margin"
                    android:layout_marginStart="@dimen/key_fact_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/tv_rating"
                    android:textColor="@color/black"
                    android:layout_marginTop="@dimen/key_fact_margin"
                    android:layout_marginStart="@dimen/key_fact_margin"
                    android:layout_marginBottom="@dimen/key_fact_margin"
                    android:textSize="@dimen/text_size_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

        </LinearLayout>
        <Space
            app:layout_constraintTop_toBottomOf="@+id/ll_key_second_line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/page_margin_start_end"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>